--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,27 @@
 name: flutter_environment_generator
 description: A new Flutter package project.
-version: 0.0.1
-homepage: null
+version: 1.0.0
+homepage: https://github.com/muhAzri/flutter_environment_generator
+repository: https://github.com/muhAzri/flutter_environment_generator
+
+publish_to: muhammadazri.my.id
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
-  flutter: ">=1.17.0"
 
 executables:
-  flutter_environment_generator:
+  ? flutter_environment_generator
 
 dependencies:
   args: ^2.4.2
-  flutter:
-    sdk: flutter
   logger: ^2.0.2+1
+  yaml: ^3.1.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  test: ^1.24.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
