--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,14 @@
 name: flutter_environment_generator
-description: A new Flutter package project.
+description: A Package To Generate Dart Define Config For Flutter Mobile.
 version: 1.0.0
 homepage: https://github.com/muhAzri/flutter_environment_generator
 repository: https://github.com/muhAzri/flutter_environment_generator
-
-publish_to: muhammadazri.my.id
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
 
 executables:
-  ? flutter_environment_generator
+  flutter_environment_generator: 
 
 dependencies:
   args: ^2.4.2
@@ -19,8 +17,6 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test:
-    sdk: flutter
   test: ^1.24.3
 
 # For information on the generic Dart part of this file, see the
